# workshop_3

./: .env.example  README.md  docker-compose.yml  pyproject.toml
data/output/: happiness_merged.csv
docs/: Markdown Live Preview.html
docs/Markdown Live Preview_files/: 143461336  js
kafka/: consumer.py  producer.py
model/: model.pkl
notebooks/: 01_eda.ipynb  02_training.ipynb  03_model.ipynb
utils/: connection_db.py  eda.py  eda_functions.py  training_functions.py
